# RE-UE4SS

./: .clang-format  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .mega-linter.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CNAME  Changelog_1.1.txt  Changelog_Pre1_1.0.0_To_Pre2_1.0.0.txt  Changelog_Pre2_1.0.0_To_Pre3_1.0.0.txt  Changelog_Pre3_1.0.0_To_Pre4_1.0.0.txt  Changelog_Pre4_1.0.0_To_Final_1.0.0.txt  Doxyfile  Problems_For_3.0.txt  README.md  Readme.md  TODO.txt  UE4SS.natvis  build.py  build_auto.bat  build_auto_clang_msvc.bat  build_auto_clang_ninja.bat  git_help.txt  internal_generate_build_files.bat  package_beta_release.bat  package_hotfix_release.bat  package_minor_release.bat  package_pre_release.bat  ruff.toml  stdout  target_helpers.lua  xmake.lua
Dependencies/ArgsParser/: CMakeLists.txt
Dependencies/File/: CMakeLists.txt
Dependencies/File/src/: File.cpp
Dependencies/JSON/: CMakeLists.txt
Dependencies/JSON/src/: Bool.cpp  Null.cpp  Number.cpp  Object.cpp  String.cpp
Dependencies/LuaRaw/: CMakeLists.txt
Dependencies/LuaRaw/include/: lua.h
Mods/StriveHitboxes-UE4SS/: .gitignore  CMakeLists.txt  README.md
Mods/StriveHitboxes-UE4SS/include/: arcsys.h  bbscript.h  bitmask.h  math_util.h  sigscan.h  simulation.h  struct_util.h
Mods/StriveHitboxes-UE4SS/src/: arcsys.cpp  bbscript.cpp  dllmain.cpp  math_util.cpp  sigscan.cpp
UE4SS/: CMakeLists.txt  xmake.lua
UE4SS/generated_include/: MacroSetter.hpp
UE4SS/generated_src/: version.cache
UE4SS/include/: AsyncCompute.hpp  Common.hpp  CrashDumper.hpp  ExceptionHandling.hpp  FilesystemWatcher.hpp  FilesystemWatcher_Linux.cpp_impl  FilesystemWatcher_Windows.cpp_impl  FlagsStringifier.hpp  LuaCustomMemberFunctions.hpp  LuaLibrary.hpp  LuaScriptMemoryAccess.hpp  LuaTests.hpp  Platform.hpp  SettingsManager.hpp  Signatures.hpp  Sync.hpp  TempSoftObjectPtr51Plus.hpp  TempSoftObjectPtrPre51.hpp  TempUEStructs.hpp  UE4SSProgram.hpp  UE4SSRuntime.hpp  UnrealDef.hpp
UE4SS/include/GUI/: BPMods.hpp  Console.hpp  ConsoleOutputDevice.hpp  DX11.hpp  Dumpers.hpp  GLFW3_OpenGL3.hpp  GUI.hpp  GUITab.hpp  ImGuiUtility.hpp  ImGuiValueHelpers.hpp  LiveView.hpp  LuaDebugger.hpp  Mods.hpp  NerdFont.hpp  Profilers.hpp  SearcherWidget.hpp  TUI.hpp  UFunctionCallerWidget.hpp  Windows.hpp
UE4SS/include/LuaType/: LuaAActor.hpp  LuaCustomProperty.hpp  LuaFName.hpp  LuaFOutputDevice.hpp  (+34 more)
UE4SS/proxy_generator/: CMakeLists.txt  main.cpp  xmake.lua
UE4SS/src/: AsyncCompute.cpp  CrashDumper.cpp  EntryLinux.cpp  EntryWin32.cpp  FilesystemWatcher.cpp  LuaLibrary.cpp  SettingsManager.cpp  Signatures.cpp  Sync.cpp  UE4SSProgram.cpp  UE4SSRuntime.cpp  main_ue4ss_rewritten.cpp
UVTD/: .clang-format  CMakeLists.txt  LICENSE  README.md  xmake.lua
UVTD/Config/: suffix_definitions.json
UVTD/scripts/: HeaderGen.py
UVTD/src/: Config.cpp  Helpers.cpp  MemberVarsDumper.cpp  MemberVarsWrapperGenerator.cpp  PlatformMemberLayoutGenerator.cpp  SolBindingsGenerator.cpp  Symbols.cpp  TemplateClassParser.cpp  TypeContainer.cpp  UVTD.cpp  UVTD_DIA.cpp  UnrealVirtualGenerator.cpp  VTableDumper.cpp  main.cpp
UVTD/tests/: PlatformMemberLayoutConfigTests.cpp  PlatformMemberLayoutGeneratorTests.cpp
cppmods/: CMakeLists.txt  xmake.lua
cppmods/EventViewerMod/: CMakeLists.txt  README.md
cppmods/KismetDebugger/: CMakeLists.txt  xmake.lua
cppmods/KismetDebuggerMod/: CMakeLists.txt  xmake.lua
cppsdk/: CMakeLists.txt  dllmain.cpp
linux/: CMakeLists.txt  README.md
linux/core/: begin_play_hooks.cpp  begin_play_hooks.hpp  blueprint_hooks.cpp  blueprint_hooks.hpp  console_exec_hooks.cpp  console_exec_hooks.hpp  entry.cpp  exports.map  game_thread_scheduler.cpp  game_thread_scheduler.hpp  headless_lua.cpp  headless_lua.hpp  load_map_hooks.cpp  load_map_hooks.hpp  object_notifications.cpp  object_notifications.hpp  object_registry_validator.cpp  object_registry_validator.hpp  pattern_resolver.cpp  pattern_resolver.hpp  status.cpp  status.hpp  ufunction_hooks.cpp  ufunction_hooks.hpp  unreal_container_bridge.cpp  unreal_container_bridge.hpp  unreal_readonly.cpp  unreal_readonly.hpp  unreal_runtime.cpp  unreal_runtime.hpp
linux/docker/: Dockerfile.builder  Dockerfile.palworld-experimental  build-package.sh  build-palworld-image.sh  palserver-entrypoint.sh  ue4ss-healthcheck.sh
linux/packaging/: UE4SS-settings.ini.in  ue4ss-build.json.in
linux/preload/: preload.c
linux/src/: case_path.cpp  elf_image.cpp  inline_hook.cpp  mod_catalog.cpp  sha256.c  utf.cpp
linux/tests/: docker_runtime_test.sh  game_thread_scheduler_test.cpp  headless_lua_test.cpp  preload_smoke.c  unit_tests.cpp  unreal_abi_compile.cpp  unreal_readonly_test.cpp  unreal_resolver_state_test.cpp
linux/tools/: docker_soak.sh  palworld_conformance.sh  probe.cpp  resolver_probe.cpp
proxy/: CMakeLists.txt
tests/: CMakeLists.txt  CppModLoaderTests.cpp  CrashDumperProbe.cpp  CrashDumperVerifier.cpp  FileTests.cpp  FilesystemWatcherTests.cpp  HeadlessHeadersTests.cpp  LinuxFMallocVTableTests.cpp  LinuxFNameHookTests.cpp  LinuxFPropertyLayoutTests.cpp  LinuxFailSoftProbe.cpp  LinuxHookTests.cpp  LinuxLauncherProbe.cpp  LinuxLoadMapOptimizedABIHookTests.cpp  LinuxLoadMapStandardABIHookTests.cpp  LinuxLuaModDiscoveryTests.cpp  LinuxPersonalityConflictProbe.cpp  LinuxPreloadProbe.cpp  LinuxPreloadScopeProbe.cpp  LinuxProcessLocalScriptFunctionResolverTests.cpp  LinuxRequiredScanFailSoftTests.cpp  LinuxSDKOutputPathTests.cpp  LinuxStartupPolicyTests.cpp  LinuxUEngineVTableTests.cpp  LinuxUEnumLayoutTests.cpp  LinuxVirtualFunctionLayoutTests.cpp  LuaMadeSimpleIntegralTests.cpp  PalworldSignatureTests.cpp  PatternSleuthElfTests.cpp  RunLinuxFailSoftProbe.cmake  RunLinuxLauncherTests.sh  RunLinuxLinkParityTests.sh  RunLinuxPreloadScopeTests.cmake  RunPalworldSignatureTests.sh  SharedLibraryTests.cpp  SigScannerTests.cpp  UnrealStringFormatTests.cpp
tests/fixtures/: CppModProbe.cpp  HostilePersonalityFixture.cpp  PatternSleuthElfFixture.cpp  SharedLibraryFixture.cpp
tests/palworld/: run_acceptance.sh  test_run_acceptance.sh
(+1133 files in other folders)
